--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.5",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "next": "15.5.4",
@@ -16,7 +17,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-vertical-timeline-component": "^3.5.3"
+    "react-vertical-timeline-component": "^3.5.3",
+    "resend": "^6.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
