--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/components": "^0.5.5",
     "@react-email/render": "^1.3.1",
+    "@react-email/tailwind": "^1.2.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "next": "15.5.4",
